# Tic-Tac-Toe

./: .gitignore  LICENSE  README.md  pyproject.toml  tictactoe.py
